<resources>
    <!-- Existing Strings -->
    <string name="app_name">PayCalc</string>
    <string name="select_start_date_and_time">Select Start Date and Time</string>
    <string name="select_end_date_and_time">Select End Date and Time</string>
    <string name="finish">Finish</string>
    <string name="total_hours">Total Hours</string>
    <string name="save">Save</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="additional_salary">Additional Salary</string>
    <string name="settings">Settings</string>
    <string name="add_shift">Add shift</string>
    <string name="hours">hours</string>
    <string name="start_of_shift">Start of shift</string>
    <string name="end_of_shift">End of shift</string>
    <string name="select_a_time">Select a time</string>
    <string name="select_a_date">Select a date</string>
    <string name="night">Night</string>
    <string name="evening">Evening</string>
    <string name="morning">Morning</string>
    <string name="set_times">Set Times</string>
    <string name="end_date_before_start_date">End date cannot be earlier than start date.</string>
    <string name="end_time_before_start_time">End time cannot be earlier or equal to start time on the same day.</string>
    <string name="calculated_result">Total work hours: %.2f\n(Overtime hours: %.2f)\n\nTotal salary: %.2f₪\n(Overtime salary: %.2f₪)</string>
    <string name="please_fill_all_fields">Please fill in all fields.</string>
    <string name="please_set_start_time_first">please set start time first.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="rest_times">Rest Time</string>
    <string name="holidays_update">Holidays Update</string>
    <string name="couldnt_connect_to_server">Couldn\'t connect to server</string>
    <string name="update_now">Update Now</string>
</resources>
