<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ui.screens.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="15dp" />

    <!-- Existing Layout for Wages -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourlyWageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/basic_salary"
                android:inputType="number"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/additionalWagesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/additional_salary"
                android:inputType="number"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Morning Shift -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/buttonSetMorningShift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_times"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Evening Shift -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/evening"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/buttonSetEveningShift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_times"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Night Shift -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/buttonSetNightShift"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_times"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <!-- Rest Day Shift -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rest_times"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />


        <Button
            android:id="@+id/buttonSetRestDayStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeMaxTextSize="16sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />


        <Button
            android:id="@+id/buttonSetRestDayEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:enabled="false"
            android:maxLines="1"
            android:text="@string/end_time"/>
    </LinearLayout>


    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:maxLines="1"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeMaxTextSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp" />

</LinearLayout>
